--- a/eclipse-workspace/Evaluation/.classpath
+++ b/eclipse-workspace/Evaluation/.classpath
@@ -3,7 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/Users/Subhanshu/Downloads/opencsv-5.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Subhanshu/Downloads/mysql-connector-java-5.1.48.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Subhanshu/Downloads/sqljdbc_7.4/enu/mssql-jdbc-7.4.1.jre8.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/MySQL/Connector J 8.0/mysql-connector-java-8.0.17.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
